fixed spacing with quote

--- a/app/assets/stylesheets/app-styles/articles.scss
+++ b/app/assets/stylesheets/app-styles/articles.scss
@@ -16,6 +16,7 @@
         width: 100%;
         text-align: right;
         color: gray;
+        margin-bottom: 0;
     }
 }
 
